--- a/src/main/webapp/WEB-INF/views/thymeleaf/provinciaDetalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/provinciaDetalle.html
@@ -77,7 +77,7 @@
                                 <div class="card card-margin flex-row">
                                     <div class="flex-row userInfo text-center">
                                         <div class="flex-row">
-                                            <img th:src="${viaje.usuario.avatar}" alt="avatar" class="rounded-circle img-avatar-size topSpace" style="max-width: 65% !important">
+                                            <img th:src="@{'/usuario/imagen/' + ${viaje.usuario.getId()}}" alt="avatar" class="rounded-circle img-avatar-size topSpace" style="max-width: 65% !important">
                                             <h4 th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}" class="card-title"></h4>
                                             <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}" class="btn btn-primary bottomSpace">Ver perfil</a>
                                             <a href="#" class="btn btn-secondary bottomSpace">Conectar</a>
@@ -144,7 +144,7 @@
 <br>
 <section>
     <div class="card mb-3" th:each="viaje : ${viajes}">
-        <img class="card-img-top" th:src="${'../' + viaje.destino.background}" alt="Imagen de Provincia">
+        <img class="card-img-top" th:src="@{'/destino/imagen/' + ${viaje.destino.getId()}}" alt="Imagen de Provincia">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
