modifico vista crearViaje

--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar-user.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar-user.html
@@ -13,10 +13,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto main-nav ">
                         <li class="nav-item">
-                            <a class="nav-link btn btn-info" th:href="@{/crear-viaje}">Crear Viaje</a>
+                            <a class="nav-link card-link" th:href="@{/home}">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link card-link" th:href="@{/perfil/mi-perfil}">Mi Perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn btn-info mr-2" th:href="@{/crear-viaje}">Crear Viaje</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn btn-danger" th:href="@{/logout}">Cerrar Sesión</a>
