--- a/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
@@ -20,7 +20,7 @@
     <link th:href="@{css/style.css}" rel="stylesheet">
 
 </head>
-<body class="body-wrapper">
+<body class="body-wrapper gray-color">
 <header>
     <div th:if="${session != null ? session.isLogged : false}">
         <!-- Fragmento de barra de navegación para usuarios autenticados -->
@@ -31,75 +31,48 @@
         <div th:replace="navbar-guest"></div>
     </div>
 </header>
-<section class="bg-dark py-5 border-top-1">
-    <div class = "container   ">
-        <div class="row justify-content-center bg-login ">
-            <div class="col-lg-5 col-md-8 align-item-center bg-shadow opacity-25">
-                <div style="margin-top:50px;" class="border mb-30 ms-0  ">
-                    <h3 class="bg-gray p-4">Crear Nuevo Viaje</h3>
+
+<section class="py-5 border-top-1">
+    <div class="container">
+        <div class="row justify-content-center bg-login">
+            <div class="col-lg-12 align-item-center bg-shadow opacity-25 card">
+                <h1 class="bg-gray p-4 text-center">Crear un nuevo viaje</h1>
+                <div class="border mb-30 ms-0">
                     <form class="p-3" action="#" th:action="@{/creacion}" th:object="${viaje}" method="POST">
-                        <label for="origen">Origen:
-                        <select name="origen.id" th:field="${viaje.origen.id}" id="origen" required>
-                            <option value="">-- Selecciona una ciudad de Origen --</option>
-                            <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre}+ ','+${ciudad.provincia.nombre}"></option>
-                        </select>
-                        </label>
-                        <br>
-                        <label for="destino">Destino: </label>
-                        <label>
-                            <select name="destino.id" th:field="${viaje.destino.id}" id="destino" required>
+                        <div class="form-group">
+                            <label for="origen" class="mb-3"><strong>Origen:</strong></label>
+                            <select name="origen.id" th:field="${viaje.origen.id}" id="origen" class="form-control mb-3" required>
+                                <option value="">-- Selecciona una ciudad de Origen --</option>
+                                <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre}+ ','+${ciudad.provincia.nombre}"></option>
+                            </select>
+
+                            <label for="destino" class="mb-3"><strong>Destino:</strong></label>
+                            <select name="destino.id" th:field="${viaje.destino.id}" id="destino" class="form-control mb-3" required>
                                 <option value="">-- Selecciona una ciudad de Destino --</option>
                                 <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre}+ ','+${ciudad.provincia.nombre}"></option>
                             </select>
-                        </label>
-                        <br>
-                        <label for="fecha">Fecha:</label>
-                        <input type="date" id="fecha" name="fecha" th:field="*{fecha}" />
-                        <br>
-                        <label for="cantidad">Cantidad de pasajeros:</label>
-                        <input type="number" id="cantidad" name="cantidad" th:field="*{cantidad}" />
-                        <label>¿Se puede fumar?</label>
-                        <label>
-                            <select name="viaje.noFumar" th:field="${viaje.noFumar}" >
-                                <option value="">-</option>
-                                <option value="true">Se puede fumar</option>
-                                <option value="false">No se puede fumar</option>
-                            </select>
-                        </label>
-                        <br>
-                        <label>¿Se aceptan niños?</label>
-                        <label>
-                            <select name="viaje.noNinios" th:field="${viaje.noNinios}" >
-                                <option value="">-</option>
-                                <option value="true">Se aceptan niños</option>
-                                <option value="false">No se aceptan niños</option>
-                            </select>
-                        </label>
-                        <br>
-                        <label>¿Se aceptan mascotas?</label>
-                        <label>
-                            <select name="viaje.noMascotas" th:field="${viaje.noMascotas}" >
-                                <option value="">-</option>
-                                <option value="true">Se aceptan mascotas</option>
-                                <option value="false">No se aceptan mascotas</option>
-                            </select>
-                        </label>
-                        <br>
-                        <div class="form-group">
-                        <label for="descripcion">Descripción:</label>
-                        <textarea class="form-control bg-gray" id="descripcion" name="descripcion" th:field="*{descripcion}"></textarea>
-                        <br>
-                        </div>
-                        <p th:if="${error != null}" class="alert alert-danger m-2" th:text="${error}"></p>
-                        <button class="p-3 btn btn-primary" type="submit">Crear Viaje</button>
-                    </form>
 
+                            <label for="fecha" class="mb-3"><strong>Fecha:</strong></label>
+                            <input type="date" id="fecha" name="fecha" th:field="*{fecha}" class="form-control mb-3" />
+
+                            <label for="cantidad" class="mb-3"><strong>Cantidad de pasajeros:</strong></label>
+                            <input type="number" id="cantidad" name="cantidad" th:field="*{cantidad}" class="form-control mb-3" />
+
+                            <label for="descripcion" class="mb-3"><strong>Descripción del viaje:</strong></label>
+                            <textarea class="form-control bg-gray mb-3" id="descripcion" name="descripcion" th:field="*{descripcion}"></textarea>
+
+                            <div class="justify-content-center text-center">
+                                <p th:if="${error != null}" class="alert alert-danger m-0" th:text="${error}"></p>
+                            </div>
+                            <div class="justify-content-center text-center">
+                                <button class="p-3 btn btn-primary mt-2" type="submit">Crear Viaje</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
 </section>
-
 </body>
 </html>
