--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -28,7 +28,9 @@ h1, h2, h3, h4, h5, h6 {
 p {
   color: #666;
 }
-
+.gray-color{
+  background-color: #a5b1b5 !important;
+}
 /*.avatar-image {
   width: 50px;
   height: 50px;
