--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -68,9 +68,10 @@
                                     <div class="form-row">
                                         <div class="form-group col-lg-3 col-md-6">
                                         <label for="origen">Origen:</label>
-                                        <select id="origen" name="origen">
+                                        <select id="origen" name="origen" class="ignore">
                                             <option value="">-- Seleccione Origen --</option>
-                                            <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
+                                            <option value="bs">Buenos Aires</option>
+                                            <option value="cb">Cordoba</option>
                                         </select>
                                         </div>
                                         <div class="form-group col-lg-3 col-md-6">
