--- a/src/main/webapp/WEB-INF/views/thymeleaf/resultadoBusqueda.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/resultadoBusqueda.html
@@ -96,7 +96,7 @@
                 <i class="fa-solid fa-exclamation-triangle mt-3" style="font-size: 8em;"></i>
                 <h1 class="display-4 alert-light mt-20 mb-20">No se encontraron elementos</h1>
                 <p class="lead mt-20 mb-3">Lo sentimos, no hay viajes que coincidan con su búsqueda.</p>
-                <a href="/spring" class="mt-4  btn btn-primary">Volver al Inicio<i> </i></a>
+                <a href="/spring" class="mt-4 p-3 btn btn-primary">Volver al Inicio<i> </i></a>
             </div>
         </div>
     </div>
