--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -25,6 +25,10 @@
   <script th:src="@{/plugins/google-map/map.js}" defer></script>
   <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
 
+  <script th:src="@{/js/maps.js}"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeHh7_S2wkpYRu1DNMwzAZr5bcSd-cpY0&callback=initMap" async defer></script>
+
   <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
   <!--<link th:href="@{/css/style.css}" rel="stylesheet">-->
   <script th:src="@{/js/script.js}"></script>
@@ -71,7 +75,9 @@
             <h5 class="card-text">Destino</h5>
             <p class="card-text" th:text="${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></p>
             <h5 class="card-text">Tiempo de viaje</h5>
-            <p class="card-text">6 horas</p>
+            <p class="card-text" id="duracion"></p>
+            <h5 class="card-text">Distancia a Recorrer:</h5>
+            <p class="card-text" id="distancia"></p>
             <h5 class="card-text">Lugares disponibles</h5>
             <p class="card-text" th:text="${viaje.cantidad}"></p>
           </div>
@@ -82,7 +88,10 @@
           <a href="#" class="btn btn-secondary bottomSpace rightSpace">Conectar</a>
           <a th:href="@{/unir-a-viaje(viaje = ${viaje.id})}" class="btn  bottomSpace rightSpace" th:classappend="${unido ? 'btn-secondary' : 'btn-primary'}" th:text="${unido ? 'Unido' : 'Unirme'}"></a>
         </div>
-      </div>
+
+      <div id="mapa" style="height:400px;"
+        th:data-origen="${coordenadaOrigen}"
+        th:data-destino="${coordenadaDestino}"></div>
   </div>
 </div>
 
@@ -175,6 +184,7 @@
     </div>
   </div>
 </div>-->
+
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
