--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -25,8 +25,8 @@
   <script th:src="@{/plugins/google-map/map.js}" defer></script>
   <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
 
-  <script th:src="@{/js/maps.js}"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeHh7_S2wkpYRu1DNMwzAZr5bcSd-cpY0&callback=initMap" async defer></script>
+
+
     <link href="https://www.nerdfonts.com/assets/css/webfont.css" rel="stylesheet">
   <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
   <!--<link th:href="@{/css/style.css}" rel="stylesheet">-->
@@ -35,6 +35,7 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
           integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous"/>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/perfil.css}" rel="stylesheet">
     <link th:href="@{/css/viaje.css}" rel="stylesheet">
@@ -54,7 +55,7 @@
 <body>
 <div class="container spaceToHeaderFixed">
     <div class="card mb-3">
-        <img class="card-img-top bottomSpace" th:src="${viaje.destino.background}" height="280"
+        <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viajes.destino.getId()}}" height="380px" alt="Imagen descriptiva del destino del viaje">
              alt="Imagen descriptiva del destino del viaje">
         <h1 class="card-title text-center"
             th:text="'Viaje creado por ' + ${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"></h1>
@@ -104,25 +105,6 @@
                 <h5 class="card-text">Lugares disponibles</h5>
                 <p class="card-text" th:text="${viaje.cantidad}"></p>
             </div>
-      <img class="card-img-top bottomSpace" th:src="@{'/destino/imagen/' + ${viajes.getId()}}" height="280" alt="Imagen descriptiva del destino del viaje">
-      <h1 class="card-title text-center" th:text="'Viaje creado por ' + ${viajes.usuario.nombre + ' ' + viajes.usuario.apellido}"></h1>
-      <!--<h5 class="card-text">Descripción</h5>-->
-      <p class="card-text text-center topSpace" th:text="${viaje.descripcion}"></p>
-      <div class="card-body row row-cols-2">
-          <div class="col text-center">
-            <h5 class="card-text">Origen</h5>
-            <p class="card-text" th:text="${viaje.origen.provincia.nombre} + ', ' + ${viaje.origen.nombre}"></p>
-            <h5 class="card-text">Fecha de salida</h5>
-            <p class="card-text" th:text="${viaje.fecha}"></p>
-            <h5 class="card-text">Condiciones</h5>
-            <li class="list-group-item">
-              <i class="fa-solid fa-paw fa-lg"></i>
-              <i class="fa-solid fa-ban-smoking fa-lg"></i>
-              <i class="fa-solid fa-guitar fa-lg"></i>
-              <i class="fa-solid fa-baby-carriage fa-lg"></i>
-            </li>
-          </div>
-
         </div>
         <p class="card-text text-center topSpace"><small class="text-muted">Última actualización: hace 2 días</small>
         </p>
@@ -230,7 +212,10 @@
   </div>
 </div>-->
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeHh7_S2wkpYRu1DNMwzAZr5bcSd-cpY0&callback=initMap" async defer></script>
+<script th:src="@{/js/maps.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript">
 </script>
